[gd_scene load_steps=6 format=3 uid="uid://cp86gv6knb0b"]

[ext_resource type="Script" path="res://Assets/Scripts/Shark.gd" id="1_cnr8c"]
[ext_resource type="Texture2D" uid="uid://hwvuapuwlp03" path="res://Assets/Graphics/shark.png" id="2_vigix"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b7mqc"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjwec"]
size = Vector2(30, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_2je70"]
radius = 74.0068

[node name="Shark" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_cnr8c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_vigix")

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D"]
target_position = Vector2(0, 75)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_b7mqc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pjwec")

[node name="ChangeDirectionTimer" type="Timer" parent="."]
autostart = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_2je70")

[node name="Label" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -2.0
offset_top = -29.0
offset_right = 3.0
offset_bottom = -6.0
text = "!"

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
